Fixed flickering issue when drag and dropping a bookmark group
Fixed async JS bug

--- a/src/styles/NewTab.css
+++ b/src/styles/NewTab.css
@@ -10,6 +10,8 @@ body {
   flex-wrap: wrap;
   gap: 10px; 
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+
+  min-height: 200px; /* prevents layout collapse while dragging */
 }
 
 .bookmark-group-box {
@@ -27,7 +29,7 @@ body {
   margin-bottom: auto;
 
   /* Smooth outline and shadow transitions */
-  transition: outline 0.2s ease, box-shadow 0.2s ease;
+  /*transition: outline 0.2s ease, box-shadow 0.2s ease;*/
 }
 
 .bookmark-group-box:hover,
